Build script changes
- Make script faster by removing sleep.
- Make script smaller by using a single function to build both targets.
- Make script smarter by making BASE_DIR path relative to script path. Now you can checkout to any directory.
- Make script portable by removing terminal stuff such as text colors when running from a non terminal app such as BBEdit.app.
- Make script output cleaner by removing clear - which had the effect of adding a bunch of blank lines to the terminal or an error in BBEdit.app.
- Now you can choose which targets to build - building only one target is much faster than building both.
- Instead of copying RefindPlusPkg to edk2, we'll just make a symbolic link.
- Remove checkout. No need to do that before every build.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ cov-int/
 infer-out/
 compile_commands.json
 000-BOOTx64-Files/
-RefindPlusPkg/
+RefindPlusPkg
 000-Releases/
 
 # OS generated files #
