--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ compile_commands.json
 000-BOOTx64-Files/
 RefindPlusPkg
 000-Releases/
+xcuserdata
 
 # OS generated files #
 ######################
